force-app/main/default/objects/AreaParticipante__c/AreaParticipante__c.object-meta.xml
<CustomObject>
    <description>Área Participante - objeto criado para operação Service Cloud Wilson Sons.</description>
    <label>Área Participante</label>
    <nameField>
        <displayFormat>AREA-{000000}</displayFormat>
        <label>Área Participante</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Áreas Participantes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>