force-app/main/default/objects/AreaParticipante__c/fields/AreaAtendimento__c.field-meta.xml
<CustomField>
    <fullName>AreaAtendimento__c</fullName>
    <description>Obrigatório para atuações de área interna.</description>
    <label>Área de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AreasParticipantesAtendimento</valueSetName>
    </valueSet>
</CustomField>