force-app/main/default/objects/AreaParticipante__c/fields/BloqueiaFechamentoCaso__c.field-meta.xml
<CustomField>
    <fullName>BloqueiaFechamentoCaso__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Impede fechamento enquanto a Área Participante estiver aberta.</description>
    <label>Bloqueia Fechamento do Caso?</label>
    <type>Checkbox</type>
</CustomField>