force-app/main/default/objects/AreaParticipante__c/fields/CaseMilestoneId__c.field-meta.xml
<CustomField>
    <fullName>CaseMilestoneId__c</fullName>
    <description>Referência técnica ao CaseMilestone quando aplicável.</description>
    <label>Id do CaseMilestone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>