force-app/main/default/objects/AreaParticipante__c/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vincula a Área Participante ao Caso.</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Área Participante</relationshipLabel>
    <relationshipName>AreaParticipante</relationshipName>
    <type>Lookup</type>
</CustomField>