force-app/main/default/objects/AreaParticipante__c/fields/ComentarioRetorno__c.field-meta.xml
<CustomField>
    <fullName>ComentarioRetorno__c</fullName>
    <description>Retorno recebido da área.</description>
    <label>Comentário de Retorno</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>