force-app/main/default/objects/AreaParticipante__c/fields/ComentarioSolicitacao__c.field-meta.xml
<CustomField>
    <fullName>ComentarioSolicitacao__c</fullName>
    <description>Descrição do que foi solicitado para a área.</description>
    <label>Comentário de Solicitação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>