force-app/main/default/objects/AreaParticipante__c/fields/DataHoraFim__c.field-meta.xml
<CustomField>
    <fullName>DataHoraFim__c</fullName>
    <description>Momento em que a Área Participante foi concluída.</description>
    <label>Data/Hora de Fim</label>
    <type>DateTime</type>
</CustomField>