force-app/main/default/objects/AreaParticipante__c/fields/DataHoraInicio__c.field-meta.xml
<CustomField>
    <fullName>DataHoraInicio__c</fullName>
    <description>Momento em que a Área Participante foi iniciada.</description>
    <label>Data/Hora de Início</label>
    <type>DateTime</type>
</CustomField>