force-app/main/default/objects/AreaParticipante__c/fields/DataHoraInicioPausa__c.field-meta.xml
<CustomField>
    <fullName>DataHoraInicioPausa__c</fullName>
    <label>Data/Hora Início Pausa</label>
    <type>DateTime</type>
</CustomField>