force-app/main/default/objects/AreaParticipante__c/fields/DataHoraPrazo__c.field-meta.xml
<CustomField>
    <fullName>DataHoraPrazo__c</fullName>
    <description>Prazo esperado, preferencialmente derivado do CaseMilestone.</description>
    <label>Data/Hora de Prazo</label>
    <type>DateTime</type>
</CustomField>