force-app/main/default/objects/AreaParticipante__c/fields/FinalizadoPor__c.field-meta.xml
<CustomField>
    <fullName>FinalizadoPor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuário que encerrou a Área Participante.</description>
    <label>Finalizado por</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Finalizado por</relationshipLabel>
    <relationshipName>FinalizadoPor</relationshipName>
    <type>Lookup</type>
</CustomField>