force-app/main/default/objects/AreaParticipante__c/fields/NomeMarco__c.field-meta.xml
<CustomField>
    <fullName>NomeMarco__c</fullName>
    <description>Nome do milestone relacionado.</description>
    <label>Nome do Marco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>