force-app/main/default/objects/AreaParticipante__c/fields/OrigemAtuacao__c.field-meta.xml
<CustomField>
    <fullName>OrigemAtuacao__c</fullName>
    <description>Automática, Manual, Reabertura ou Reclassificação.</description>
    <label>Origem da Área Participante</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automática</fullName>
                <default>true</default>
                <label>Automática</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Reabertura</fullName>
            </value>
            <value>
                <fullName>Reclassificação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>