force-app/main/default/objects/AreaParticipante__c/fields/OrigemSLA__c.field-meta.xml
<CustomField>
    <fullName>OrigemSLA__c</fullName>
    <label>Origem SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
                <default>true</default>
                <label>Custom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>