force-app/main/default/objects/AreaParticipante__c/fields/PercentualDecorrido__c.field-meta.xml
<CustomField>
    <fullName>PercentualDecorrido__c</fullName>
    <description>Percentual utilizado pela barra de progresso do LWC.</description>
    <label>Percentual Decorrido</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>