force-app/main/default/objects/AreaParticipante__c/fields/RegraSLACategorizacao__c.field-meta.xml
<CustomField>
    <fullName>RegraSLACategorizacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regra SLA Categorização</label>
    <referenceTo>RegrasSLACategorizacao__c</referenceTo>
    <relationshipName>AreasParticipantes</relationshipName>
    <type>Lookup</type>
</CustomField>