force-app/main/default/objects/AreaParticipante__c/fields/RequerRetornoCliente__c.field-meta.xml
<CustomField>
    <fullName>RequerRetornoCliente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a Área Participante exige devolutiva formal ao cliente.</description>
    <label>Requer Retorno ao Cliente?</label>
    <type>Checkbox</type>
</CustomField>