force-app/main/default/objects/AreaParticipante__c/fields/Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Responsavel__c</fullName>
    <description>Responsável pela Área Participante.</description>
    <label>Responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>