force-app/main/default/objects/AreaParticipante__c/fields/SequenciaAcionamento__c.field-meta.xml
<CustomField>
    <fullName>SequenciaAcionamento__c</fullName>
    <label>Sequência Acionamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>