force-app/main/default/objects/AreaParticipante__c/fields/Solicitante__c.field-meta.xml
<CustomField>
    <fullName>Solicitante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuário que acionou a Área Participante.</description>
    <label>Solicitante</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Solicitante</relationshipLabel>
    <relationshipName>Solicitante</relationshipName>
    <type>Lookup</type>
</CustomField>