force-app/main/default/objects/AreaParticipante__c/fields/SolucaoTomada__c.field-meta.xml
<CustomField>
    <fullName>SolucaoTomada__c</fullName>
    <description>Solução informada ao encerrar a Área Participante.</description>
    <label>Solução Tomada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>