force-app/main/default/objects/AreaParticipante__c/fields/StatusAtuacao__c.field-meta.xml
<CustomField>
    <fullName>StatusAtuacao__c</fullName>
    <description>Aberta, Em Andamento, Concluída, Cancelada ou Vencida.</description>
    <label>Status da Área Participante</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aberta</fullName>
                <default>true</default>
                <label>Aberta</label>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Concluída</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Vencida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>