force-app/main/default/objects/AreaParticipante__c/fields/StatusSLA__c.field-meta.xml
<CustomField>
    <fullName>StatusSLA__c</fullName>
    <label>Status SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dentro do Prazo</fullName>
                <default>true</default>
                <label>Dentro do Prazo</label>
            </value>
            <value>
                <fullName>Em Atenção</fullName>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
            <value>
                <fullName>Concluído</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Pausado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>