force-app/main/default/objects/AreaParticipante__c/fields/TempoConclusaoMin__c.field-meta.xml
<CustomField>
    <fullName>TempoConclusaoMin__c</fullName>
    <description>Tempo total entre início e fim.</description>
    <label>Tempo de Conclusão</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>