force-app/main/default/objects/AreaParticipante__c/fields/TempoConsumidoMinutos__c.field-meta.xml
<CustomField>
    <fullName>TempoConsumidoMinutos__c</fullName>
    <label>Tempo Consumido (Minutos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>