force-app/main/default/objects/AreaParticipante__c/fields/TempoPausadoMinutos__c.field-meta.xml
<CustomField>
    <fullName>TempoPausadoMinutos__c</fullName>
    <label>Tempo Pausado (Minutos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>