force-app/main/default/objects/AreaParticipante__c/fields/TempoRestanteMinutos__c.field-meta.xml
<CustomField>
    <fullName>TempoRestanteMinutos__c</fullName>
    <label>Tempo Restante (Minutos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>