force-app/main/default/objects/AreaParticipante__c/fields/TempoSLAMinutos__c.field-meta.xml
<CustomField>
    <fullName>TempoSLAMinutos__c</fullName>
    <label>Tempo SLA (Minutos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>