force-app/main/default/objects/AreaParticipante__c/fields/TipoAreaParticipante__c.field-meta.xml
<CustomField>
    <fullName>TipoAreaParticipante__c</fullName>
    <label>Tipo Área Participante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Categorização Inicial</fullName>
            </value>
            <value>
                <fullName>Tratamento Primário</fullName>
            </value>
            <value>
                <fullName>Área Interna</fullName>
                <default>true</default>
                <label>Área Interna</label>
            </value>
            <value>
                <fullName>Retorno ao Cliente</fullName>
            </value>
            <value>
                <fullName>SLA Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>