force-app/main/default/objects/AreaParticipante__c/fields/TipoAtuacao__c.field-meta.xml
<CustomField>
    <fullName>TipoAtuacao__c</fullName>
    <description>Define se a Área Participante é de categorização, tratamento primário, área interna ou retorno ao cliente.</description>
    <label>Tipo de Área Participante</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Categorização Inicial</fullName>
                <default>true</default>
                <label>Categorização Inicial</label>
            </value>
            <value>
                <fullName>Tratamento Primário</fullName>
            </value>
            <value>
                <fullName>Área Interna</fullName>
            </value>
            <value>
                <fullName>Retorno ao Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>