force-app/main/default/objects/AreaParticipante__c/fields/ViolouSLA__c.field-meta.xml
<CustomField>
    <fullName>ViolouSLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se a Área Participante foi concluída após o prazo.</description>
    <label>Violou SLA?</label>
    <type>Checkbox</type>
</CustomField>