force-app/main/default/objects/AreaParticipante__c/recordTypes/CentroLogistico.recordType-meta.xml
<RecordType>
    <fullName>CentroLogistico</fullName>
    <active>true</active>
    <label>Centro Logístico</label>
</RecordType>