force-app/main/default/objects/AreaParticipante__c/recordTypes/Rebocadores.recordType-meta.xml
<RecordType>
    <fullName>Rebocadores</fullName>
    <active>true</active>
    <label>Rebocadores</label>
</RecordType>