force-app/main/default/objects/AreaParticipante__c/recordTypes/TeconRioGrande.recordType-meta.xml
<RecordType>
    <fullName>TeconRioGrande</fullName>
    <active>true</active>
    <label>Tecon Rio Grande</label>
</RecordType>