force-app/main/default/objects/AreaParticipante__c/recordTypes/TeconSalvador.recordType-meta.xml
<RecordType>
    <fullName>TeconSalvador</fullName>
    <active>true</active>
    <label>Tecon Salvador</label>
</RecordType>